# B-Fox

./: .gitignore  LICENSE  OPERATION.en.md  OPERATION.ja.md  OPERATION.md  README.en,md  README.en.md  README.ja.md  README.md
BFoxReceiverForIOS/: .gitignore  Privacy.en.md  Privacy.md  README.md  README.md.en
bfox_beacon/: .gitignore  CMakeLists.txt  sdkconfig.defaults
bfox_beacon/main/: CMakeLists.txt  beacon_setting.cc  beacon_setting.h  bfox_beacon.cc  bfox_beacon.h  bfox_beacon_interface.h  ble_device.cc  ble_device.h  ble_services.cc  ble_services.h  file_system.cc  file_system.h  gpio_control.cc  gpio_control.h  ibeacon.cc  ibeacon.h  logger.cc  logger.h  main.cc  message_queue.h  task.cc  task.h  util.cc  util.h  version.h.in  voltage_check_task.cc  voltage_check_task.h  xiao_esp32c6_pin.h
bfox_receiver/: CMakeLists.txt  sdkconfig.defaults
bfox_receiver/main/: CMakeLists.txt  beacon_receive_task.cc  beacon_receive_task.h  bfox_receiver.cc  bfox_receiver.h  bfox_receiver_interface.h  ble_beacon_item.h  file_system.cc  file_system.h  gpio_control.cc  gpio_control.h  gpio_input_watch_task.h  gptimer.h  i2c_util.cc  i2c_util.h  ibeacon.h  logger.cc  logger.h  main.cc  message_queue.h  receiver_setting.cc  receiver_setting.h  st7032.cc  st7032.h  task.cc  task.h  util.cc  util.h  version.h.in  xiao_esp32c6_pin.h
blerdf_beacon/: CMakeLists.txt
blerdf_receiver/: CMakeLists.txt
brdf_beacon/: CMakeLists.txt
brdf_beacon/main/: CMakeLists.txt  Kconfig.projbuild  beacon_setting.cc  beacon_setting.h  ble_device.cc  ble_device.h  ble_services.cc  ble_services.h  brdf_beacon.cc  brdf_beacon.h  brdf_beacon_interface.h  file_system.cc  file_system.h  gpio_control.cc  gpio_control.h  ibeacon.cc  ibeacon.h  logger.cc  logger.h  main.cc  message_queue.h  task.cc  task.h  util.cc  util.h  version.h.in  voltage_check_task.cc  voltage_check_task.h  xiao_esp32c6_pin.h
brdf_receiver/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
(+153 files in other folders)
